initialise npm packe

--- a/WebGUI/views/selection.ejs
+++ b/WebGUI/views/selection.ejs
@@ -1,4 +1,4 @@
-<div class="mt-5 p-3 text-black box" style="height:fit-content">
+<!-- <div class="mt-5 p-3 text-black box" style="height:fit-content">
   <h4 style="text-align: center;">Task</h4>
     <hr style="margin-top: 0;">
   <div class="container">
@@ -16,4 +16,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
