--- a/WebGUI/public/css/style.css
+++ b/WebGUI/public/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #f5f5f5;
+  color: #062743;
 }
 .navbar {
   padding: 0.3% 5% 0.3% 5%;
@@ -10,20 +11,72 @@ body {
 }
 
 .ctrlStatus {
-  color: red;
+  color: white;
+}
+
+.bg-dark {
+  background-color: #11698e !important;
+}
+.navbar-dark .navbar-nav .nav-link {
+  color: #fff;
+}
+
+.btn-info {
+  color: white;
+  background-color: #11698e;
+  border-color: #11698e;
+  /* border-color: #0dcaf0; */
+}
+.btn-danger {
+  color: #fff;
+  background-color: #11698e;
+  border-color: #11698e;
+}
+
+.btn-info.disabled,
+.btn-info:disabled {
+  color: white;
+  background-color: black;
+  border-color: black;
+}
+
+.btn.disabled,
+.btn:disabled,
+fieldset:disabled .btn {
+  pointer-events: none;
+  opacity: 1.65;
+  background-color: black;
+  border-color: black;
+}
+
+.btn-danger:disabled {
+  color: #fff;
+  background-color: black;
+  border-color: black;
+  z-index: 99;
 }
 
 .btn:hover {
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: #11698e;
 }
 
 .sidebar {
-  background-color: darkslategray;
+  background-color: #87c0cd;
+
+  transition: all 0.5s ease-in-out;
+  height: 95vh;
 }
 
 .nav {
   flex-wrap: nowrap;
+}
+
+.navbar-dark .navbar-brand {
+  color: white;
+}
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
 }
 
 .sidebarLi {
@@ -47,12 +100,18 @@ main {
   overflow-x: auto;
   overflow-y: hidden;
 }
+.btn-light {
+  color: white;
+  background-color: #062743;
+  border-color: #062743;
+  opacity: 1.65;
+}
 
 .box {
-  background-color: white;
+  background-color: #87c0cd;
   border-style: solid;
-  border-color: white;
-  border-radius: 7%;
+  border-color: #87c0cd;
+  border-radius: 15%;
 }
 
 #video {
@@ -89,21 +148,21 @@ main {
   opacity: 0.3;
 }
 
-.auto-status-btn-left{
-    border-style: hidden;
-    border-radius: 8% 0 0 8%;
-    color:black;
-    background-color:#eeeff0;
-    padding:3%;
+.auto-status-btn-left {
+  border-style: hidden;
+  border-radius: 8% 0 0 8%;
+  color: black;
+  background-color: #eeeff0;
+  padding: 3%;
 }
-.auto-status-btn-right{
-    border-style: hidden;
-    border-radius: 0 8% 8% 0;
-    color:black;
-    background-color:#eeeff0;
-    padding:3%;
+.auto-status-btn-right {
+  border-style: hidden;
+  border-radius: 0 8% 8% 0;
+  color: black;
+  background-color: #eeeff0;
+  padding: 3%;
 }
 
-.auto-status-btn-active{
-    background-color:#0dcaf0;
+.auto-status-btn-active {
+  background-color: #11698e;
 }
