--- a/WebGUI/views/index.ejs
+++ b/WebGUI/views/index.ejs
@@ -1,23 +1,39 @@
 <%- include ('header') %>
-    <div>
-        <main>
-            <%- include('sidebar') %>
-            <div class="b-example-divider "></div>
-            
-            <div class="d-flex flex-column flex-shrink-0">
-                <%- include('camera') %>
-                <%- include('selection') %>
-            </div>
-            <div class="b-example-divider "></div>
+<div>
+  <main style="height: 95vh;background-color: #87C0CD">
+    <%- include('sidebar') %>
+   
 
-            <%- include('status') %>
-            
-            <div class="b-example-divider "></div>
-            <div class="d-flex flex-column flex-shrink-0">
-                <%- include('manual') %>
-                <%- include('autonomous') %>
-            </div>
-        </main>
+    <div
+      class="b-example-divider"
+      style="background-color: #87C0CD; height: 95vh;border-right: #062743;border-right: solid"
+    ></div>
+    <div style="background-color: #87C0CD"><%- include('status') %></div>
+    <div
+    class="b-example-divider"
+    style="height: 95vh; background-color: #87C0CD;border-left: #062743;border-left: solid"
+  ></div>
+
+  <div
+    class="d-flex flex-column flex-shrink-0"
+    style="height: 95vh; background-color: #87C0CD;background-color: #87C0CD"
+  >
+    <%- include('camera') %> <%- include('selection') %>
+  </div>
+    <div
+      class="b-example-divider"
+      style="background-color: #87C0CD; height: 95vh;background-color: #87C0CD;border-right: #062743;border-right: solid"
+    ></div>
+    <div
+      class="d-flex flex-column flex-shrink-0"
+      style="background-color: #87C0CD; height: 95vh"
+    >
+      <%- include('manual') %> <%- include('autonomous') %>
+      <!-- <div class="mt-4 p-3 text-black box" style="height: fit-content"> -->
+        <!-- <canvas id="meterCanvas" width="400" height="325"></canvas> -->
+      </div>
     </div>
+  </main>
+</div>
 
-    <%- include ('footer') %>
+<%- include ('footer') %>
