--- a/WebGUI/views/manual.ejs
+++ b/WebGUI/views/manual.ejs
@@ -1,4 +1,4 @@
-<div class="mt-2 p-3 text-black box">
+<!-- <div class="mt-2 p-3 text-black box">
     <h4 style="text-align: center;">Manual Control</h4>
     <hr style="margin-top: 0;">
     <div class="btn-group-vertical" style="margin-left: 23%;">
@@ -12,4 +12,4 @@
         <input class="controller btn btn-info btn-lg" style="height: 80px;" type="button" id="down" value="S">
     </div>
 
-</div>
+</div> -->
